--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,11 +1,20 @@
 @import '_colors';
+@import url('https://fonts.googleapis.com/css?family=Lato');
+
 body {
   background: $bgcolor;
+  font-family: 'Lato', sans-serif;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  vertical-align: baseline;
 }
 
 .container {
   display: flex;
   flex-direction: column;
+  padding: 10px;
 }
 
 .main-and-sidebar-wrapper {
@@ -15,7 +24,7 @@ body {
 
 .main {
   text-align: center;
-  flex: 3 auto;
+  flex: 3 1 auto;
   margin-right: 60px;
   img {
     width: 100%;
@@ -23,8 +32,7 @@ body {
 }
 
 .sidebar {
-  flex: 1 auto;
-  border: 1px solid #a2a2a2;
+  flex: 1 1 auto;
   padding: 0 20px;
 }
 
@@ -70,6 +78,56 @@ header button {
   }
 }
 
+#calendar {
+  font-weight: 900;
+  text-transform: uppercase;
+  border: 1px solid #D5D5D5;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+#calendar > header {
+  flex-grow: 7;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#calendar .day-names {
+  font-size: 0.825em;
+  color: #666;
+  background: #D5D5D5;
+  flex-grow: 5;
+  display: flex;
+  align-items: center;
+
+  p {
+    flex-grow : 1;
+    text-align: center;
+  }
+}
+
+#calendar .days {
+  flex-grow: 88;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+
+  &> div {
+    width: calc(100% * 1/7);
+    box-sizing: border-box;
+    border: 1px solid #F5F5F5;
+    border-width: 1px 0 0 1px;
+  }
+}
+
+#calendar .day_number {
+  font-size: 0.8em;
+  float: right;
+  padding: 0.6em;
+}
 
 // @font-face {
 //   font-family: 'MyFont';
