--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,3 +1,5 @@
+$fa-font-path: "~font-awesome/fonts";
+@import '~font-awesome/scss/font-awesome.scss';
 @import '_colors';
 body {
   background: $bgcolor;
