--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -94,7 +94,7 @@ header button {
   flex-grow: 7;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
 }
 
 #calendar .day-names {
