--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,77 +1,57 @@
+@import "~bootstrap/scss/bootstrap.scss";
 $fa-font-path: "~font-awesome/fonts";
 @import '~font-awesome/scss/font-awesome.scss';
+@import '~mapbox.js/theme/style.css';
+
 @import '_colors';
+@import '_mixins';
+
+$space: 20px;
+
 body {
   background: $bgcolor;
 }
 
-.container {
-  display: flex;
-  flex-direction: column;
-}
-
-.main-and-sidebar-wrapper {
-  display: flex;
-  flex-direction: row;
-}
-
-.main {
-  text-align: center;
-  flex: 3 auto;
-  margin-right: 60px;
-  img {
-    width: 100%;
-  }
-}
+// .container {
+//   width: 100%;
+//   display: flex;
+//   flex-direction: row;
+// }
+//
+// .main {
+//   width: 70%;
+// }
 
 .sidebar {
-  flex: 1 auto;
-  border: 1px solid #a2a2a2;
-  padding: 0 20px;
+  padding: $space;
+  width: 100%;
+  height: 100%;
+  .title { margin-top: 0px; }
 }
 
-header {
-  color: #ef5350;
-  padding: 20px 0;
-  display: flex;
-  justify-content: space-between;
+
+// map
+#map-container, #map {
+  width: 100%;
+  height: 100vh;
+  background-color: #444444;
 }
 
-header nav {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  display: flex;
-  align-items: baseline;
+@include media-breakpoint-xs {
 }
 
-header nav li {
-  margin-right: 15px;
-  a {
-    text-decoration: none;
-    color: inherit;
-  }
+@include media-breakpoint-between(sm, md) {
 }
 
-header button {
-  margin: 20px 0;
-  background-color: #ef5350;
-  border: none;
-  padding: 8px 25px;
-  text-transform: uppercase;
+@include media-breakpoint-between(md, lg) {
+
 }
+@include media-breakpoint-between(lg, xl) {
 
-@media (max-width: 600px) {
-  .main-and-sidebar-wrapper {
-    flex-direction: column;
-  }
-
-  .main {
-    margin-right: 0;
-    margin-bottom: 60px;
-  }
 }
+@include media-breakpoint-xl {
 
+}
 
 // @font-face {
 //   font-family: 'MyFont';
