--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -37,6 +37,20 @@ body {
   background-color: #444444;
 }
 
+.line-icon {
+  $size: 20px;
+  border-radius: 50%;
+  width: $size;
+  height: $size;
+  display: inline-block;
+  font-size: 1em;
+  font-weight: bold;
+  text-align: center;
+  color: white;
+  margin-right: 4px;
+  margin-bottom: 4px;
+}
+
 @include media-breakpoint-xs {
 }
 
