--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -21,13 +21,27 @@ body {
 // .main {
 //   width: 70%;
 // }
+.col-sidebar {
+  height: 100vh;
+  overflow-y: scoll;
+
+}
 
 .sidebar {
   padding: $space;
   width: 100%;
   height: 100%;
   .title { margin-top: 0px; }
+  #toggle-lines { margin-right: $space/2; }
+  #subway-lines {
+    padding-left: 0px;
+    list-style: none;
+    fieldset {
+      display: block;
+    }
+  }
 }
+
 
 
 // map
